feat: added endpoint for free vlans
